2007-05-19  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
	  libsteticui/WidgetDesigner.cs, libsteticui/Project.cs,
	  libstetic/IProject.cs: Added ImagesRootPath, which is the root path
	  where to start looking for images. Added the ImportFileCallback
	  callback, called when an image file is referenced from the stetic
	  project.
	* libstetic/ImageInfo.cs: Image files are now relative to
	  ImagesRootPath.
	* libstetic/stetic.glade, libstetic/editor/SelectImageDialog.cs: Use
	  the new root image path to create relative paths to images.
	* libstetic/editor/ImageSelector.cs: Make the clean button smaller.
	* libstetic/WidgetUtils.cs: Added AbsoluteToRelative function.

2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Notebook.cs, libstetic/wrapper/objects.xml: Added
	  CurrentPage property to Notebook.

2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilSignalDescriptor.cs: Added missing null check.
	* libsteticui/ProjectBackend.cs: Remove debug cwl.
	* libstetic/wrapper/Container.cs: Don't show the main window if the
	  visible flag is not set. Fixes bug #81365.

2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetActionBar.cs, libstetic/CommandDescriptor.cs: Fix
	  bug about widget commands without an icon not being properly shown.
	* libstetic/wrapper/Notebook.cs: Implemented Swap methods.
	* libstetic/libstetic.mdp: Updated.

2007-05-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
	  libsteticui/PaletteBackend.cs, libsteticui/Project.cs: Added
	  support for internal widgets and internal widget libraries.
	  Internal widgets won't be shown in the palette unless the library
	  to which they belong is internal to the project.
	* libsteticui/Component.cs, libsteticui/ActionGroupComponent.cs,
	  libsteticui/WidgetComponent.cs: Added properties for changing the