@@ -1,3 +1,9 @@
+2007-05-21  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libsteticui/CecilSignalDescriptor.cs,
+	  libsteticui/CecilWidgetLibrary.cs: Properly handle generic event
+	  handler types. Fixes bug #80783.
+
 2007-05-19  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
